# BLEtransfer

./: .cyignore  .ninja_log  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  Makefile  README.md  REFACTORING_SUMMARY.md  app_bt_gatt_handler.c  app_bt_gatt_handler.h  app_bt_utils.c  app_bt_utils.h  app_data_transfer.c  app_data_transfer.h  app_waveform.c  app_waveform.h  compressed_waveform_data.h  design.cybt  generate_compressed_waveform.py  main.c  project_info.json  static_waveform_data.h
Windows_app/: App.xaml  App.xaml.cs  BLETester.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md
Windows_app/Controllers/: BLEController.cs
Windows_app/Interop/: NativeMethods.cs  PSoCDriver.cs
configs/COMPONENT_CM4/: FreeRTOSConfig.h
macOS_BLE_Tester/: Package.swift
macOS_BLE_Tester/Sources/BLETester/: BLEApp.swift  BLEManager.swift  ContentView.swift  WaveformView.swift
macOS_app/: .gitignore  Package.swift  README.md  build.sh
macOS_app/Sources/BLETester/: BLEController.swift  ContentView.swift  WaveformView.swift
macOS_app/Sources/PSoCDriverWrapper/: PSoCDriver.swift
macOS_app/Sources/PSoCDriverWrapper/include/: PSoCDriverWrapper.h  module.modulemap
shared_driver/: CMakeLists.txt  README.md
shared_driver/include/psoc_driver/: compression.h  crc32.h  data_types.h  protocol.h  psoc_driver.h  transfer_session.h
shared_driver/src/: compression.cpp  crc32.cpp  psoc_driver.cpp  transfer_session.cpp
